Revision history for Run-Env

0.02    2008-03-10
	* Removed the '-' in EVN variables. Doesn't work good with shell.
	* dependencies fixed

0.01    2008-03-09
        First version, released on an unsuspecting world.
