@@ -15,21 +15,21 @@ not run its Makefile.PL or Build.PL.
 Hash: SHA1
 
 SHA1 02e41846eb614e203f6d2aa854a694685f169e32 Build.PL
-SHA1 919c06bfbabb8077ad5d04c6100f99a8b796ae39 Changes
+SHA1 91fbe435ed6611534851579a0bb46e33f098f181 Changes
 SHA1 5b6227e2fba1cf4355252ca04d23ac651850084b MANIFEST
-SHA1 e09d0759d402272d8d79e112dc119d728c7920ea META.yml
+SHA1 ed2bf861747395e0bf30fb0f2569305f169627e0 META.yml
 SHA1 441f6ea1fc9ef462913534fbc946a113f9c2418c Makefile.PL
-SHA1 6142cd089f0c1ef564bcf185301dc44e18928692 README
-SHA1 db57bd667cfc3a280327eba5c8a659d24f9180c3 lib/Run/Env.pm
+SHA1 110d8fe96d8a47e83e13c9390a6b53c4cdf4f46c README
+SHA1 89eb4754f09d8bcadfff6aace171c8ae67ee273b lib/Run/Env.pm
 SHA1 9e6427697c85e60ccbdba014bd1d54cb110b135f t/01_Run-Env.t
-SHA1 98af7b3550602cbd6bf38aeef80f2c49cba1331a t/02_Running-Environment.t
+SHA1 607de81d7e69c5704f5ad9417e38ac3633100ed0 t/02_Running-Environment.t
 SHA1 0efe877fa1269effecb45e83c1d69e3401a0c035 t/bin/print-run-env.pl
 SHA1 0b1c5a2d59be6bfa7d60c64cd964fea6a0331705 t/pod-coverage.t
 SHA1 640935336dc1123c0069bcf5432bcaedc2cf22d3 t/pod.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.6 (GNU/Linux)
 
-iD8DBQFH1OE8uzJBASXpqvsRAmm6AKCQt2cB51EeekWA0roOOEScD+Tu2wCfXU35
-Qs6uUNwK5oaOur6T4hFiJ5I=
-=EbIo
+iD8DBQFH1jLbuzJBASXpqvsRAnOWAKCaLP3eQvLeHFTO7VzBDzAuPmyivwCfX1GA
+ImXqZ/+JIO0QU2N8E4xtXHk=
+=dWNi
 -----END PGP SIGNATURE-----
